[gd_scene load_steps=8 format=3 uid="uid://eti6hebpvajm"]

[ext_resource type="Script" path="res://RigidBody2D.gd" id="1_k8o77"]
[ext_resource type="Script" path="res://Mainmain.gd" id="1_pwrxn"]
[ext_resource type="PackedScene" uid="uid://dbm4nferl4eax" path="res://Particle.tscn" id="3_1xldv"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3_ylmko"]

[sub_resource type="CircleShape2D" id="CircleShape2D_muy6u"]
radius = 14.1421

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_dtrly"]
scenes/1/scene = ExtResource("3_1xldv")

[sub_resource type="TileSet" id="TileSet_cgn41"]
tile_size = Vector2i(22, 22)
sources/0 = SubResource("TileSetScenesCollectionSource_dtrly")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_pwrxn")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
script = ExtResource("1_k8o77")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_muy6u")

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = SubResource("TileSet_cgn41")
format = 2
layer_0/tile_data = PackedInt32Array(262155, 0, 65536, 327691, 0, 65536, 393227, 0, 65536, 393229, 0, 65536, 393230, 0, 65536, 262159, 0, 65536, 262160, 0, 65536, 393234, 0, 65536, 262164, 0, 65536, 327700, 0, 65536, 262165, 0, 65536, 327701, 0, 65536, 262166, 0, 65536, 327702, 0, 65536, 262169, 0, 65536, 262171, 0, 65536, 327707, 0, 65536, 262172, 0, 65536, 327708, 0, 65536, 262173, 0, 65536, 327709, 0, 65536, 327710, 0, 65536, 262176, 0, 65536, 262178, 0, 65536, 262179, 0, 65536, 262180, 0, 65536, 327716, 0, 65536, 327717, 0, 65536, 393253, 0, 65536, 262183, 0, 65536, 458763, 0, 65536, 524299, 0, 65536, 589835, 0, 65536, 262156, 0, 65536, 327692, 0, 65536, 393228, 0, 65536, 458764, 0, 65536, 524300, 0, 65536, 589836, 0, 65536, 458765, 0, 65536, 458766, 0, 65536, 327695, 0, 65536, 393231, 0, 65536, 458767, 0, 65536, 524303, 0, 65536, 589839, 0, 65536, 327696, 0, 65536, 393232, 0, 65536, 458768, 0, 65536, 524304, 0, 65536, 589840, 0, 65536, 458770, 0, 65536, 524306, 0, 65536, 589842, 0, 65536, 262163, 0, 65536, 327699, 0, 65536, 393235, 0, 65536, 458771, 0, 65536, 524307, 0, 65536, 589843, 0, 65536, 458772, 0, 65536, 458773, 0, 65536, 393238, 0, 65536, 458774, 0, 65536, 524310, 0, 65536, 589846, 0, 65536, 393239, 0, 65536, 458775, 0, 65536, 524311, 0, 65536, 589847, 0, 65536, 327705, 0, 65536, 393241, 0, 65536, 458777, 0, 65536, 524313, 0, 65536, 589849, 0, 65536, 262170, 0, 65536, 327706, 0, 65536, 393242, 0, 65536, 458778, 0, 65536, 524314, 0, 65536, 589850, 0, 65536, 458779, 0, 65536, 524315, 0, 65536, 458780, 0, 65536, 524316, 0, 65536, 458781, 0, 65536, 524317, 0, 65536, 393246, 0, 65536, 458782, 0, 65536, 327712, 0, 65536, 393248, 0, 65536, 458784, 0, 65536, 524320, 0, 65536, 589856, 0, 65536, 262177, 0, 65536, 327713, 0, 65536, 458785, 0, 65536, 524321, 0, 65536, 589857, 0, 65536, 327714, 0, 65536, 458786, 0, 65536, 524322, 0, 65536, 327715, 0, 65536, 458787, 0, 65536, 524323, 0, 65536, 458788, 0, 65536, 524324, 0, 65536, 458789, 0, 65536, 327719, 0, 65536, 393255, 0, 65536, 458791, 0, 65536, 262184, 0, 65536, 327720, 0, 65536, 393256, 0, 65536, 458792, 0, 65536, 393257, 0, 65536, 458793, 0, 65536, 524329, 0, 65536, 589865, 0, 65536, 393258, 0, 65536, 458794, 0, 65536, 524330, 0, 65536, 589866, 0, 65536, 262187, 0, 65536, 327723, 0, 65536, 393259, 0, 65536, 458795, 0, 65536, 262188, 0, 65536, 327724, 0, 65536, 393260, 0, 65536, 458796, 0, 65536, 786433, 0, 65536, 851969, 0, 65536, 917505, 0, 65536, 983041, 0, 65536, 1048577, 0, 65536, 1114113, 0, 65536, 786434, 0, 65536, 851970, 0, 65536, 983042, 0, 65536, 1114114, 0, 65536, 786435, 0, 65536, 851971, 0, 65536, 983043, 0, 65536, 1114115, 0, 65536, 851972, 0, 65536, 786439, 0, 65536, 851975, 0, 65536, 1048583, 0, 65536, 1114119, 0, 65536, 786440, 0, 65536, 851976, 0, 65536, 1048584, 0, 65536, 1114120, 0, 65536, 786441, 0, 65536, 851977, 0, 65536, 917513, 0, 65536, 983049, 0, 65536, 1048585, 0, 65536, 1114121, 0, 65536, 786442, 0, 65536, 851978, 0, 65536, 1048586, 0, 65536, 1114122, 0, 65536, 786443, 0, 65536, 851979, 0, 65536, 1048587, 0, 65536, 1114123, 0, 65536, 786446, 0, 65536, 851982, 0, 65536, 917518, 0, 65536, 983054, 0, 65536, 1048590, 0, 65536, 1114126, 0, 65536, 786447, 0, 65536, 851983, 0, 65536, 983055, 0, 65536, 786448, 0, 65536, 851984, 0, 65536, 983056, 0, 65536, 851985, 0, 65536, 1048593, 0, 65536, 786452, 0, 65536, 851988, 0, 65536, 786453, 0, 65536, 851989, 0, 65536, 786454, 0, 65536, 851990, 0, 65536, 917526, 0, 65536, 983062, 0, 65536, 1048598, 0, 65536, 1114134, 0, 65536, 786455, 0, 65536, 851991, 0, 65536, 786456, 0, 65536, 851992, 0, 65536, 786459, 0, 65536, 851995, 0, 65536, 917531, 0, 65536, 983067, 0, 65536, 1048603, 0, 65536, 1114139, 0, 65536, 917532, 0, 65536, 983068, 0, 65536, 917533, 0, 65536, 983069, 0, 65536, 917534, 0, 65536, 983070, 0, 65536, 786463, 0, 65536, 851999, 0, 65536, 917535, 0, 65536, 983071, 0, 65536, 1048607, 0, 65536, 1114143, 0, 65536, 786466, 0, 65536, 852002, 0, 65536, 917538, 0, 65536, 983074, 0, 65536, 1048610, 0, 65536, 1114146, 0, 65536, 786467, 0, 65536, 852003, 0, 65536, 1048611, 0, 65536, 1114147, 0, 65536, 786468, 0, 65536, 852004, 0, 65536, 1048612, 0, 65536, 1114148, 0, 65536, 852005, 0, 65536, 1048613, 0, 65536, 917544, 0, 65536, 983080, 0, 65536, 1048616, 0, 65536, 1114152, 0, 65536, 852009, 0, 65536, 983081, 0, 65536, 1048617, 0, 65536, 786474, 0, 65536, 852010, 0, 65536, 983082, 0, 65536, 1048618, 0, 65536, 852011, 0, 65536, 983083, 0, 65536, 1048619, 0, 65536, 917548, 0, 65536, 983084, 0, 65536, 1048620, 0, 65536, 1114156, 0, 65536, 786479, 0, 65536, 852015, 0, 65536, 917551, 0, 65536, 983087, 0, 65536, 917552, 0, 65536, 983088, 0, 65536, 917553, 0, 65536, 983089, 0, 65536, 1048625, 0, 65536, 1114161, 0, 65536, 917554, 0, 65536, 983090, 0, 65536, 786483, 0, 65536, 852019, 0, 65536, 917555, 0, 65536, 983091, 0, 65536, 786432, 0, 65536, 851968, 0, 65536, 917504, 0, 65536, 983040, 0, 65536, 1048576, 0, 65536, 1114112, 0, 65536, 917508, 0, 65536, 1048580, 0, 65536, 786438, 0, 65536, 851974, 0, 65536, 1048582, 0, 65536, 1114118, 0, 65536, 917512, 0, 65536, 983048, 0, 65536, 786445, 0, 65536, 851981, 0, 65536, 917517, 0, 65536, 983053, 0, 65536, 1048589, 0, 65536, 1114125, 0, 65536, 1048592, 0, 65536, 917521, 0, 65536, 1114129, 0, 65536, 786451, 0, 65536, 851987, 0, 65536, 917525, 0, 65536, 983061, 0, 65536, 1048597, 0, 65536, 1114133, 0, 65536, 786458, 0, 65536, 851994, 0, 65536, 917530, 0, 65536, 983066, 0, 65536, 1048602, 0, 65536, 1114138, 0, 65536, 786462, 0, 65536, 851998, 0, 65536, 1048606, 0, 65536, 1114142, 0, 65536, 786465, 0, 65536, 852001, 0, 65536, 917537, 0, 65536, 983073, 0, 65536, 1048609, 0, 65536, 1114145, 0, 65536, 917541, 0, 65536, 983077, 0, 65536, 917543, 0, 65536, 983079, 0, 65536, 1048615, 0, 65536, 1114151, 0, 65536, 852008, 0, 65536, 786473, 0, 65536, 917547, 0, 65536, 1114155, 0, 65536, 786478, 0, 65536, 852014, 0, 65536, 917550, 0, 65536, 983086, 0, 65536, 1048624, 0, 65536, 1114160, 0, 65536, 786482, 0, 65536, 852018, 0, 65536, 1310731, 0, 65536, 1376267, 0, 65536, 1441803, 0, 65536, 1507339, 0, 65536, 1572875, 0, 65536, 1638411, 0, 65536, 1310732, 0, 65536, 1376268, 0, 65536, 1441804, 0, 65536, 1507340, 0, 65536, 1572876, 0, 65536, 1638412, 0, 65536, 1376269, 0, 65536, 1441805, 0, 65536, 1441806, 0, 65536, 1507342, 0, 65536, 1376271, 0, 65536, 1441807, 0, 65536, 1310736, 0, 65536, 1376272, 0, 65536, 1441808, 0, 65536, 1507344, 0, 65536, 1572880, 0, 65536, 1638416, 0, 65536, 1310737, 0, 65536, 1376273, 0, 65536, 1441809, 0, 65536, 1507345, 0, 65536, 1572881, 0, 65536, 1638417, 0, 65536, 1376275, 0, 65536, 1441811, 0, 65536, 1507347, 0, 65536, 1572883, 0, 65536, 1310740, 0, 65536, 1376276, 0, 65536, 1572884, 0, 65536, 1638420, 0, 65536, 1310741, 0, 65536, 1638421, 0, 65536, 1310742, 0, 65536, 1376278, 0, 65536, 1572886, 0, 65536, 1638422, 0, 65536, 1376279, 0, 65536, 1441815, 0, 65536, 1507351, 0, 65536, 1572887, 0, 65536, 1310745, 0, 65536, 1376281, 0, 65536, 1441817, 0, 65536, 1507353, 0, 65536, 1572889, 0, 65536, 1638425, 0, 65536, 1310746, 0, 65536, 1376282, 0, 65536, 1441818, 0, 65536, 1507354, 0, 65536, 1572890, 0, 65536, 1638426, 0, 65536, 1376283, 0, 65536, 1441819, 0, 65536, 1441820, 0, 65536, 1507356, 0, 65536, 1376285, 0, 65536, 1441821, 0, 65536, 1310750, 0, 65536, 1376286, 0, 65536, 1441822, 0, 65536, 1507358, 0, 65536, 1572894, 0, 65536, 1638430, 0, 65536, 1310751, 0, 65536, 1376287, 0, 65536, 1441823, 0, 65536, 1507359, 0, 65536, 1572895, 0, 65536, 1638431, 0, 65536, 1310753, 0, 65536, 1376289, 0, 65536, 1441825, 0, 65536, 1572897, 0, 65536, 1638433, 0, 65536, 1310754, 0, 65536, 1376290, 0, 65536, 1441826, 0, 65536, 1572898, 0, 65536, 1638434, 0, 65536, 1310756, 0, 65536, 1376292, 0, 65536, 1441828, 0, 65536, 1572900, 0, 65536, 1638436, 0, 65536, 1310757, 0, 65536, 1376293, 0, 65536, 1441829, 0, 65536, 1572901, 0, 65536, 1638437, 0, 65536, 1310759, 0, 65536, 1376295, 0, 65536, 1441831, 0, 65536, 1572903, 0, 65536, 1638439, 0, 65536, 1310760, 0, 65536, 1376296, 0, 65536, 1441832, 0, 65536, 1572904, 0, 65536, 1638440, 0, 65536)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 325)
script = ExtResource("3_ylmko")

[node name="Pixels" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 650.0

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 120.0
offset_bottom = 74.0
pivot_offset = Vector2(-11, 8)
text = "Generate"

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 86.0
offset_right = 120.0
offset_bottom = 136.0
pivot_offset = Vector2(-11, 8)
text = "No Force"

[node name="Button3" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 202.0
offset_right = 129.0
offset_bottom = 252.0
pivot_offset = Vector2(-11, 8)
text = "Strong Force
"

[node name="Button4" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 145.0
offset_right = 120.0
offset_bottom = 195.0
pivot_offset = Vector2(-11, 8)
text = "Light Force"

[node name="Button5" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 25.0
offset_top = 259.0
offset_right = 132.0
offset_bottom = 306.0
text = "Collisions"

[node name="Button6" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 23.0
offset_top = 314.0
offset_right = 130.0
offset_bottom = 361.0
text = "Square
"

[node name="Button7" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 23.0
offset_top = 369.0
offset_right = 130.0
offset_bottom = 416.0
text = "Explosion"

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button7" to="." method="_on_button_7_pressed"]
